@@ -117,13 +117,13 @@ class Formula < RubyPeg
   
   def table_reference
     node :table_reference do
-      table_name && ignore { terminal("[") } && (range_structured_reference || complex_structured_reference || simple_structured_reference) && ignore { terminal("]") }
+      table_name && ignore { terminal("[") } && (range_structured_reference || short_range_structured_reference || complex_structured_reference || simple_structured_reference) && ignore { terminal("]") }
     end
   end
   
   def local_table_reference
     node :local_table_reference do
-      ignore { terminal("[") } && (range_structured_reference || complex_structured_reference || overly_structured_reference || simple_structured_reference) && ignore { terminal("]") }
+      ignore { terminal("[") } && (range_structured_reference || short_range_structured_reference || complex_structured_reference || overly_structured_reference || simple_structured_reference) && ignore { terminal("]") }
     end
   end
   
@@ -133,6 +133,10 @@ class Formula < RubyPeg
   
   def range_structured_reference
     terminal(/\[[^\u005d]*\],\[[^\u005d]*\]:\[[^\u005d]*\]/)
+  end
+  
+  def short_range_structured_reference
+    terminal(/\[[^\u005d]*\]:\[[^\u005d]*\]/)
   end
   
   def complex_structured_reference
