@@ -18,10 +18,11 @@ percentage                      := /[-+]?[0-9]+\.?[0-9]*/ `'%'
 number                          := /[-+]?[0-9]+\.?[0-9]*([eE][-+]?[0-9]+)?/
 operator                        := '+' | '-' | '/' | '*' | '^'
 external_reference              := /\[\d+\]!?/ any_internal_reference
-table_reference                 := table_name `'[' (range_structured_reference | complex_structured_reference | simple_structured_reference) `']'
-local_table_reference           := `'[' (range_structured_reference | complex_structured_reference | overly_structured_reference | simple_structured_reference) `']'
+table_reference                 := table_name `'[' (range_structured_reference | short_range_structured_reference | complex_structured_reference | simple_structured_reference) `']'
+local_table_reference           := `'[' (range_structured_reference | short_range_structured_reference | complex_structured_reference | overly_structured_reference | simple_structured_reference) `']'
 table_name                       = /[.\p{Word}_]+/
 range_structured_reference       = /\[[^\u005d]*\],\[[^\u005d]*\]:\[[^\u005d]*\]/
+short_range_structured_reference = /\[[^\u005d]*\]:\[[^\u005d]*\]/
 complex_structured_reference     = /\[[^\u005d]*\],\[[^\u005d]*\]/
 overly_structured_reference      = `'[' simple_structured_reference `']'
 simple_structured_reference      = /[^\u005d]*/
