@@ -1,5 +1,6 @@
 # Head
 
+- Can now parse structured table references like this: G.40.levels.efficiency[[Description]:[Description]]
 - Fixed StringIO#lines is deprecated warning.
 
 # 0.1.20 - 2013 August 28th
